--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,15 @@ C# & .NET/C#_Ex2/Solution/Reversi/Reversi/obj/Debug/Reversi.csproj.FileListAbsol
 C# & .NET/C#_Ex2/Solution/Reversi/Reversi/bin/Debug/Reversi.vshost.exe.manifest
 
 *.Cache
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
