--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ C# & .NET/C#_Ex2/Solution/Reversi/Reversi/bin/Debug/Reversi.vshost.exe.manifest
 # Maven
 log/
 target/
+/Computer Graphics/CG_Ex5/out
