--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@ C# & .NET/C#_Ex2/Solution/Reversi/Reversi/bin/Debug/Reversi.vshost.exe.manifest
 log/
 target/
 /Computer Graphics/CG_Ex5/out
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/.classpath
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/.project
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/.settings/org.eclipse.jdt.core.prefs
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/res/earth.jpg
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/res/floor_stone.jpg
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/res/israel-flag.gif
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/res/wood.jpg
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/src/edu/cg/opengl/textures/App.java
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/src/edu/cg/opengl/textures/GameLogic.java
+/Computer Graphics/CG_Ex5/Docs/CG_textures_complete/src/edu/cg/opengl/textures/Viewer.java
